kubernetes/cluster/active/apps/papra/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Document management and archiving.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: papra.svg
    gethomepage.dev/name: Papra
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=papra"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "papra.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: papra
          namespace: papra
          port: 1221
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
